# ContraTiempo

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.claude/: dev.sh
docs/: ARCHITECTURE.md
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: crudTools.ts  index.ts  queryTools.ts  scenarioTools.ts  storage.ts
public/: manifest.json  sw.js
shared/: sync.ts  timeUtils.ts  types.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/grid/: DroppableCell.tsx  FranjaCard.tsx  FranjaPanel.tsx  GridToolbar.tsx  ScheduleGrid.tsx  WeekGrid.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/masters/: AsignaturasManager.tsx  AulasManager.tsx  DocentesManager.tsx  OcupacionesManager.tsx
src/components/scenarios/: ScenarioComparator.tsx  ScenarioManager.tsx
src/components/ui/: PWAUpdatePrompt.tsx
src/components/views/: VistaAsignatura.tsx  VistaAula.tsx  VistaConfig.tsx  VistaDocente.tsx  VistaGeneral.tsx  VistaHerramientas.tsx  VistaImportExport.tsx  VistaValidaciones.tsx
src/hooks/: useFilteredAulas.ts  useGridColumns.ts
src/lib/: environment.ts
src/services/: fileSync.ts  fileSyncBrowser.ts  fileSyncTauri.ts  syncSchema.ts  timeUtils.ts
src/services/excel/: excelExporter.ts  excelImporter.ts
src/services/validators/: capacityCalculator.ts  conflictDetector.ts  gapFinder.ts  hoursCalculator.ts
src/stores/: useAppStore.ts
src/types/: index.ts
