[package]
name = "contratiempo"
version = "0.1.0"
description = "ContraTiempo - Gestor de horarios de conservatorio"
authors = ["JLMiralles"]
edition = "2021"

[lib]
name = "contratiempo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
